# fosslight_yocto_scanner

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  REUSE.toml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: publish-release.yml  pull-request.yml
.reuse/: dep  dep5
files_for_preparation/: bom.bbclass  bom_for_e.bbclass  dump_tasks.bbclass
src/fosslight_yocto/: _help.py  _overwrite_yaml.py  _package_item.py  _write_result_file.py  _zip_source_works.py  create_oss_report_for_yocto.py  parsing_meta_doubleopen.py  parsing_yaml.py
test/: confest.py  conftest.py  test_tox.py
test_files/: bom.json  installed-package-names.txt  installed-packages.txt  oss-pkg-info.yaml  oss-pkg-info2.yaml  sbom-info.yaml
test_files/output/: binary.sh  binary.txt
test_files/output/etc/: busybox.links.nosuid  group  hostname  hosts  inittab  issue  issue.net  ld.so.cache
test_files/output/lib/: libblkid.so.1.1.0  libz.so.1.2.11
test_files/output/lib/modules/5.4.40-yocto-standard/: modules.builtin  modules.builtin.modinfo  modules.dep  modules.order
test_files/output/lib/udev/: ata_id  cdrom_id  collect  mtd_probe  scsi_id  v4l_id
test_files/output/sbin/: bootlogd  fstab-decode  halt.sysvinit  init.sysvinit  killall5  ldconfig  runlevel.sysvinit  shutdown.sysvinit  udevd  v86d
test_files/output/usr/lib/: libkmod.so.2.3.4
test_files/output/usr/libexec/: udevadm
test_files/output/usr/sbin/: run-postinsts
test_files/output/var/cache/ldconfig/: aux-cache
(+9 files in other folders)
